--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -11,14 +11,14 @@
   <script src="lib/jasmine-2.2.0/jasmine-html.js"></script>
   <script src="lib/jasmine-2.2.0/boot.js"></script>
 
-  <!-- include source files here... -->
-  <script src="src/Player.js"></script>
-  <script src="src/Song.js"></script>
+  <!-- include source files here...applications -->
+  <script src="src/AddressBook.js"></script>
 
 
-  <!-- include spec files here... -->
-  <script src="spec/SpecHelper.js"></script>
-  <script src="spec/PlayerSpec.js"></script>
+
+  <!-- include spec files here... tests-->
+  <script src="spec/AddressBookSpec.js"></script>
+
 
 
 </head>
