--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -13,6 +13,7 @@
 
   <!-- include source files here...applications -->
   <script src="src/AddressBook.js"></script>
+  <script src="src/Contact.js"></script>
 
 
 
